Closed
Bug 1684801
Opened 5 years ago
Closed 5 years ago
unchecked radio button rendering regressed
Categories
(Core :: Widget, defect)
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | fixed |
People
(Reporter: heycam, Assigned: heycam)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
The bug 1682210 changes regressed the rendering of unchecked radio buttons.
| Assignee | ||
Comment 1•5 years ago
|
||
Radio buttons are indeterminate if none of the options in the group is selected (they match :indeterminate), but we don't want to paint them like we do indeterminate checkboxes.
| Assignee | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → cam
Status: NEW → ASSIGNED
Pushed by cmccormack@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/96e412e3420d
Don't paint indeterminate radio buttons with a solid background. r=spohl
Comment 5•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Updated•5 years ago
|
status-firefox84:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•