Bug 1684801 - Don't paint indeterminate radio buttons with a solid background. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D100756