widget/nsNativeBasicTheme.h
@@ -221,7 +221,7 @@ class nsNativeBasicTheme : protected nsNativeTheme, public nsITheme {
                                  RefPtr<Path>& aOutRect);
 
   virtual std::pair<sRGBColor, sRGBColor> ComputeCheckboxColors(
-      const EventStates& aState);
+      const EventStates& aState, StyleAppearance aAppearance);
   virtual sRGBColor ComputeCheckmarkColor(const EventStates& aState);
   virtual std::pair<sRGBColor, sRGBColor> ComputeRadioCheckmarkColors(
       const EventStates& aState);
