widget/windows/nsNativeBasicThemeWin.cpp
@@ -8,9 +8,9 @@
 #include "LookAndFeel.h"
 
 std::pair<sRGBColor, sRGBColor> nsNativeBasicThemeWin::ComputeCheckboxColors(
-    const EventStates& aState) {
+    const EventStates& aState, StyleAppearance aAppearance) {
   if (!LookAndFeel::GetInt(LookAndFeel::IntID::UseAccessibilityTheme, 0)) {
-    return nsNativeBasicTheme::ComputeCheckboxColors(aState);
+    return nsNativeBasicTheme::ComputeCheckboxColors(aState, aAppearance);
   }
 
   bool isDisabled = aState.HasState(NS_EVENT_STATE_DISABLED);
@@ -50,7 +50,8 @@ nsNativeBasicThemeWin::ComputeRadioCheckmarkColors(const EventStates& aState) {
     return nsNativeBasicTheme::ComputeRadioCheckmarkColors(aState);
   }
 
-  auto [unusedColor, checkColor] = ComputeCheckboxColors(aState);
+  auto [unusedColor, checkColor] =
+      ComputeCheckboxColors(aState, StyleAppearance::Radio);
   (void)unusedColor;
   sRGBColor backgroundColor = ComputeCheckmarkColor(aState);
 
